<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- TALES CREATED BY INDIVIDUAL GROUP MEMBERS -->


    <string name="app_name">AulIrishTales</string>

    <!-- ******credits page****** BY ZARA -->

    <string name="credits">Credits</string>
    <string name="member_nameZar">Zara McKeown</string>
    <string name="member_nameHan">Hannah Glasgow</string>
    <string name="member_nameRac">Rachel Bradley</string>
    <string name="member_nameLau">Laura McKeague</string>
    <string name="rate">Please rate our app</string>


    <!-- ******Fairy Tale Page *********** -->
    <string name="fairy_tale_title">Fairy Tale</string>

    <string name="fairy_tale">
    <p>
     As legend has it, <b>female fairies</b> often give birth to deformed children.
     Since the fairies prefer visually pleasing babies, they would go into the mortal world and swap with a healthy human baby.
     leaving behind a changeling. While the changeling looked like a human baby,
     it carried none of the same emotional characteristics.
     The changeling was only happy when misfortune or grief happened in the house.
     The changeling legend has lasted for centuries.
    </p>
    </string>

    <!-- St patrick -->

    <string name="stpatricktale_text">
        "The whole thing started with Saint Patrick. Actually, Saint Patrick was not Irish.
        He was born around 373 A.D. in either Scotland (near the town of Dumbarton) or in Roman Britain (the Romans left Britain in 410 A.D.).
        His real name is believed to be Maewyn Succat (he took on Patrick, or Patricus, after he became a priest).
        He was kidnapped at the age of 16 and sold into slavery in Ireland. During his 6-year captivity (he worked as a shepherd), he began to have religious visions.
        He  finally escaped (after voices in one of his visions told him where he could find a getaway ship) and went to France, where he became a priest (and later a bishop).
        When he was about 60 years old, Saint Patrick returned to Ireland to spread the Christian word.
        Its said that Patrick had an unusually winning personality, and that helped him win converts."

    </string>

    <string name ="stpatricktitle_text">The Tale of St Patrick…</string>

    <!-- Banshee -->

    <string name="story1_theBanshee">
        The Banshee was a woman who carried with her an omen of death.
        Sometimes you saw the Banshee as an old woman dressed in rags, sometimes you saw her as a
        young and beautiful girl and sometimes you saw her as a wash woman, ringing out bloody clothing.
        Whenever she was seen, she let out a horrible cry and legend has it this cry brought death to any family that heard it.
        King James I of Scotland thought he was approached by a Banshee. Shortly after, he died at the Earl of Atholl.
    </string>

    <string name="title1_theBanshee">The Tale Of The Banshee</string>

    <!-- Leprechaun -->
    <string name="leprechaunTale">Leprechauns usually take the form of old men who enjoy partaking in mischief. Their trade
        is that of a cobbler or shoemaker. They are said to be very rich, having many treasure crocks buried during war-time.
        According to legend, if anyone keeps an eye fixed upon one, he cannot escape, but the moment the gaze is withdrawn,
        he vanishes.</string>

    <string name="title">The Tale of the Leprechaun</string>


    <!-- CREATED BY ZARA FOR THE QUIZ -->

    <string name="question">Question</string>
    <string name="of">of</string>
    <string name="quiz_title">Eight Question Quiz</string>
    <string name="finished_quiz">How would you like to continue?</string>
    <string name="main_menu">Main Menu</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="exit">Exit</string>
    <string name="submit">Submit</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect!</string>
    <string name="score">Score</string>
</resources>
