<?xml version="1.0" encoding="utf-8"?>
<!-- CREATED BY ZARA-->
<FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/paper">
        <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical|left|right"
                android:rowOrderPreserved="false"
                android:textAlignment="center"
                android:focusableInTouchMode="false">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:id="@+id/appyCampersLogo"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:src="@drawable/appycampers"
                    android:longClickable="false"
                    android:paddingLeft="60dp"
                    android:textAlignment="center"
                    android:layout_gravity="center|fill"/>
            <TextView
                    android:layout_width="315dp"
                    android:layout_height="wrap_content"
                    android:text="@string/credits"
                    android:id="@+id/credits"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:linksClickable="false"
                    android:textStyle="bold|italic"
                    android:textAlignment="center"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/credits_size"
                    android:gravity="center"
                    android:textColor="@color/orange"/>
            <TextView
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:text="@string/member_nameZar"
                    android:id="@+id/memNameZara"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:textStyle="italic"
                    android:singleLine="false"
                    android:clickable="false"
                    android:textSize="@dimen/memName_Size"
                    android:textColor="@color/Green"
                    android:gravity="center"/>
            <TextView
                    android:layout_width="303dp"
                    android:layout_height="wrap_content"
                    android:text="@string/member_nameLau"
                    android:id="@+id/memNameLaura"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:textSize="@dimen/memName_Size"
                    android:textColor="@color/Green"
                    android:gravity="center"/>
            <TextView
                    android:layout_width="313dp"
                    android:layout_height="wrap_content"
                    android:text="@string/member_nameRac"
                    android:id="@+id/memNameRachel"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:textSize="@dimen/memName_Size"
                    android:textColor="@color/Green"
                    android:gravity="center"/>
            <TextView
                    android:layout_width="298dp"
                    android:layout_height="wrap_content"
                    android:text="@string/member_nameHan"
                    android:id="@+id/memNameHannah"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:textSize="@dimen/memName_Size"
                    android:textColor="@color/Green"
                    android:gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:id="@+id/textView1"
                    android:layout_row="6"
                    android:layout_column="0"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:id="@+id/rating"
                    android:layout_row="7"
                    android:layout_column="0"
                    android:textStyle="bold|italic"
                    android:textSize="@dimen/credits_size"
                    android:layout_gravity="center"
                    android:textColor="@color/orange"/>
            <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    android:layout_row="8"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:numStars="4"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/textView2"
                      android:layout_row="10"
                      android:layout_column="0"
                      android:textColor="@color/black"
                      android:textSize="@dimen/memName_Size"
                      android:text="@string/app_name"
                      android:capitalize="none"
                      android:editable="false"/>
        </GridLayout>
    </FrameLayout>
